# eng

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust-audit.yaml  rust.yml
examples/2d/: main.rs  shader.wgsl
examples/cube/: fragment.frag  fragment.frag.spv  main.rs  shader.wgsl  vertex.vert  vertex.vert.spv
examples/ui/: main.rs
shader_builder/: Cargo.toml
shader_builder/src/: lib.rs
shaders/: fragment.frag  fragment.frag.spv  shader.wgsl  vertex.vert  vertex.vert.spv
src/: app.rs  as_any.rs  buffer.rs  buffer_pool.rs  camera.rs  constants.rs  lib.rs  material.rs  mesh.rs  model.rs  pipeline_cache.rs  render_target.rs  renderer.rs  scene.rs  shader.rs  task.rs  texture.rs  utils.rs  vertex_format.rs
src/ecs/: any_storage.rs  any_vec.rs  builder.rs  bundle.rs  command.rs  component.rs  event.rs  hierarchy.rs  mod.rs  query.rs  raw_vec.rs  resource.rs  sparse_any_vec.rs  sparse_raw_vec.rs  sparse_vec.rs  system.rs  type_descriptor.rs  world.rs
src/render/: asset.rs  buffer.rs  buffer_pool.rs  bundle.rs  camera.rs  components.rs  constants.rs  material.rs  mesh.rs  mod.rs  model.rs  pipeline_cache.rs  render_target.rs  renderable.rs  renderer.rs  resource.rs  scene.rs  shader.rs  texture.rs  transform.rs  uniform_buffer.rs  vertex_format.rs
src/render/shaders/: offscreen.wgsl  shader.wgsl  standard.wgsl
src/ui/: mod.rs  ui.wgsl
