[package]
name = "eng"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
futures = { version = "^0.3", features = ["async-await"], default-features = false }
log = { version = "^0.4", default-features = false }
wgpu = { version = "^0.12", features = ["webgl"], default-features = false }
zerocopy = { version = "^0.6", default-features = false }
glam = { version = "^0.20", features = ["libm"], default-features = false }
squish = { version = "^1", default-features = false }
raw-window-handle = { version = "^0.4", default-features = false }
hashbrown = { version = "^0.12", features = ["ahash", "inline-more"], default-features = false }
spinning_top = { version = "^0.2", default-features = false }
naga = { version = "^0.8", features = ["wgsl-in" ] }
lazy_static = { version = "^1.4", default-features = false }
num-traits = { version = "^0.2", default-features = false }

[target.'cfg(unix)'.dependencies]
winit = { version = "^0.27", features = ["x11", "wayland"], default-features = false }

[target.'cfg(not(unix))'.dependencies]
winit = { version = "^0.26", default-features = false }

[dev-dependencies]
tokio = { version = "^1.12", features = ["full"] }
pretty_env_logger = { version = "^0.4" }