[package]
name = "eng"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
log = { version = "^0.4", default-features = false }
wgpu = { version = "^0.14", features = ["webgl", "naga"], default-features = false }
zerocopy = { version = "^0.6", default-features = false }
glam = { version = "^0.24", features = ["libm"], default-features = false }
squish = { version = "^1", default-features = false }
hashbrown = { version = "^0.12", features = ["ahash", "inline-more"], default-features = false }
spinning_top = { version = "^0.2", default-features = false }
naga = { version = "^0.10", features = ["wgsl-in" ] }
lazy_static = { version = "^1.4", default-features = false }
num-traits = { version = "^0.2", default-features = false }
futures = { version = "^0.3", features = ["alloc", "async-await"], default-features = false }
windowing = { version = "^0.1", git = "https://github.com/dlunch/windowing", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "^0.4", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.24", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_env_logger = { version = "^0.4" }
image = { version = "^0.24" }